# SlicerQuickModelAlign

./: CMakeLists.txt  LICENSE  QuickModelAlign.py  README.md
QuickAlign/: LICENSE-QUICKALIGN.txt  QuickAlign.py
